completer till paginaiton no erroor

--- a/src/pages/Products/Product.css
+++ b/src/pages/Products/Product.css
@@ -1,4 +1,9 @@
+
+.pagination{
+    margin-top: 2em;
+}
+
 .pagination .selected {
-    background-color: blue;
+    background-color: #208080;
     color: aliceblue;
 }
